[gd_scene load_steps=37 format=2]

[ext_resource path="res://Assets/Tilesheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/Free Paper UI System/1 Sprites/Paper UI Pack/Paper UI/Folding & Cutout/3 Item Holder/1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/inventory.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/Kenney Mini.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/show_fps.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 112, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 128, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 64, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 80, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 144, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 160, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "apple_icon",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "cabbage_icon",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "carrot_icon",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "coin_icon",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ) ],
"loop": true,
"name": "corn_icon",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "onion_icon",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "orange_icon",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "strawberry_icon",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=38]
font_path = "res://Assets/Fonts/Kenney Mini.ttf"

[sub_resource type="DynamicFont" id=23]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 38 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 64, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 192, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 96, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 144, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 160, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 16, 64, 16, 16 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 28 ) ],
"loop": true,
"name": "apple_pack",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ) ],
"loop": true,
"name": "cabbage_pack",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ) ],
"loop": true,
"name": "carrot_pack",
"speed": 5.0
}, {
"frames": [ SubResource( 31 ) ],
"loop": true,
"name": "corn_pack",
"speed": 5.0
}, {
"frames": [ SubResource( 32 ) ],
"loop": true,
"name": "onion_pack",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ) ],
"loop": true,
"name": "orange_pack",
"speed": 5.0
}, {
"frames": [ SubResource( 34 ) ],
"loop": true,
"name": "strawberry_pack",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=46]
font_path = "res://Assets/Fonts/Kenney Mini.ttf"

[sub_resource type="DynamicFont" id=35]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 46 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 112, 160, 16, 16 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ SubResource( 36 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "apple_icon",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "cabbage_icon",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "carrot_icon",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "coin_icon",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ) ],
"loop": true,
"name": "corn_icon",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "onion_icon",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "orange_icon",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "strawberry_icon",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=44]
font_path = "res://Assets/Fonts/Kenney Mini.ttf"

[sub_resource type="DynamicFont" id=40]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 44 )

[sub_resource type="DynamicFontData" id=45]
font_path = "res://Assets/Fonts/Kenney Mini.ttf"

[sub_resource type="DynamicFont" id=42]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 45 )

[sub_resource type="DynamicFontData" id=43]
font_path = "res://Assets/Fonts/Kenney Mini.ttf"

[sub_resource type="DynamicFont" id=26]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 43 )

[sub_resource type="DynamicFont" id=47]
size = 10
font_data = ExtResource( 4 )

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 174.0 ]
}

[node name="Coin_Icon" type="AnimatedSprite" parent="."]
position = Vector2( 9, 8 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 21 )
animation = "coin_icon"
__meta__ = {
"_edit_lock_": true
}

[node name="Coin_Text" type="RichTextLabel" parent="Coin_Icon"]
margin_left = 10.0
margin_top = -10.0
margin_right = 328.0
custom_fonts/normal_font = SubResource( 23 )
bbcode_text = "0"
text = "0"
fit_content_height = true

[node name="HUD_Pack" type="Sprite" parent="."]
position = Vector2( 166, 169 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Carrot_Pack" type="AnimatedSprite" parent="HUD_Pack"]
position = Vector2( -155, 4 )
scale = Vector2( 3.5, 3.5 )
z_index = 1
frames = SubResource( 27 )
animation = "carrot_pack"

[node name="Carrot_Text" type="RichTextLabel" parent="HUD_Pack/Carrot_Pack"]
margin_left = 3.0
margin_top = -2.0
margin_right = 11.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 35 )
text = "0"
deselect_on_focus_loss_enabled = false

[node name="Onion_Pack" type="AnimatedSprite" parent="HUD_Pack"]
position = Vector2( -230, 4 )
scale = Vector2( 3.5, 3.5 )
z_index = 1
frames = SubResource( 27 )
animation = "onion_pack"

[node name="Onion_Text" type="RichTextLabel" parent="HUD_Pack/Onion_Pack"]
margin_left = 3.0
margin_top = -2.0
margin_right = 11.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 35 )
text = "0"

[node name="Corn_Pack" type="AnimatedSprite" parent="HUD_Pack"]
position = Vector2( -80, 4 )
scale = Vector2( 3.5, 3.5 )
z_index = 1
frames = SubResource( 27 )
animation = "corn_pack"

[node name="Corn_Text" type="RichTextLabel" parent="HUD_Pack/Corn_Pack"]
margin_left = 3.0
margin_top = -2.0
margin_right = 11.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 35 )
text = "0"

[node name="Strawberry_Pack" type="AnimatedSprite" parent="HUD_Pack"]
position = Vector2( 0, 4 )
scale = Vector2( 3.5, 3.5 )
z_index = 1
frames = SubResource( 27 )
animation = "strawberry_pack"

[node name="Strawberry_Text" type="RichTextLabel" parent="HUD_Pack/Strawberry_Pack"]
margin_left = 3.0
margin_top = -2.0
margin_right = 11.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 35 )
text = "0"

[node name="Apple_Pack" type="AnimatedSprite" parent="HUD_Pack"]
position = Vector2( 70, 4 )
scale = Vector2( 3.5, 3.5 )
z_index = 1
frames = SubResource( 27 )
animation = "apple_pack"

[node name="Apple_Text" type="RichTextLabel" parent="HUD_Pack/Apple_Pack"]
margin_left = 3.0
margin_top = -2.0
margin_right = 11.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 35 )
text = "0"

[node name="Orange_Pack" type="AnimatedSprite" parent="HUD_Pack"]
position = Vector2( 145, 4 )
scale = Vector2( 3.5, 3.5 )
z_index = 1
frames = SubResource( 27 )
animation = "orange_pack"

[node name="Orange_Text" type="RichTextLabel" parent="HUD_Pack/Orange_Pack"]
margin_left = 3.0
margin_top = -2.0
margin_right = 11.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 35 )
text = "0"

[node name="Cabbage_Pack" type="AnimatedSprite" parent="HUD_Pack"]
position = Vector2( 220, 4 )
scale = Vector2( 3.5, 3.5 )
z_index = 1
frames = SubResource( 27 )
animation = "cabbage_pack"

[node name="Cabbage_Text" type="RichTextLabel" parent="HUD_Pack/Cabbage_Pack"]
margin_left = 3.0
margin_top = -2.0
margin_right = 11.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 35 )
text = "0"

[node name="Mark_Icon" type="AnimatedSprite" parent="HUD_Pack"]
visible = false
modulate = Color( 0.94902, 0.682353, 0.427451, 1 )
position = Vector2( -230, 2.49997 )
scale = Vector2( 5, 3.4 )
z_index = 1
frames = SubResource( 37 )

[node name="HUD_Seed" type="Sprite" parent="."]
position = Vector2( 166, 169 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Carrot_Icon" type="AnimatedSprite" parent="HUD_Seed"]
position = Vector2( -155, 5 )
scale = Vector2( 3, 3 )
frames = SubResource( 24 )
animation = "carrot_icon"

[node name="Carrot_Text" type="RichTextLabel" parent="HUD_Seed/Carrot_Icon"]
margin_left = 2.0
margin_top = -3.0
margin_right = 10.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 40 )
text = "0"

[node name="Onion_Icon" type="AnimatedSprite" parent="HUD_Seed"]
position = Vector2( -230, 5 )
scale = Vector2( 3, 3 )
frames = SubResource( 24 )
animation = "onion_icon"

[node name="Onion_Text" type="RichTextLabel" parent="HUD_Seed/Onion_Icon"]
margin_left = 2.0
margin_top = -3.0
margin_right = 10.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 42 )
text = "0"

[node name="Corn_Icon" type="AnimatedSprite" parent="HUD_Seed"]
position = Vector2( -80, 5 )
scale = Vector2( 3, 3 )
frames = SubResource( 24 )
animation = "corn_icon"

[node name="Corn_Text" type="RichTextLabel" parent="HUD_Seed/Corn_Icon"]
margin_left = 2.0
margin_top = -3.0
margin_right = 10.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 26 )
text = "0"

[node name="Strawberry_Icon" type="AnimatedSprite" parent="HUD_Seed"]
position = Vector2( -5, 5 )
scale = Vector2( 3, 3 )
frames = SubResource( 24 )
animation = "strawberry_icon"

[node name="Strawberry_Text" type="RichTextLabel" parent="HUD_Seed/Strawberry_Icon"]
margin_left = 2.0
margin_top = -3.0
margin_right = 10.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 26 )
text = "0"

[node name="Apple_Icon" type="AnimatedSprite" parent="HUD_Seed"]
position = Vector2( 70, 5 )
scale = Vector2( 3, 3 )
frames = SubResource( 24 )
animation = "apple_icon"

[node name="Apple_Text" type="RichTextLabel" parent="HUD_Seed/Apple_Icon"]
margin_left = 2.0
margin_top = -3.0
margin_right = 10.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 26 )
text = "0"

[node name="Orange_Icon" type="AnimatedSprite" parent="HUD_Seed"]
position = Vector2( 145, 5 )
scale = Vector2( 3, 3 )
frames = SubResource( 24 )
animation = "orange_icon"

[node name="Orange_Text" type="RichTextLabel" parent="HUD_Seed/Orange_Icon"]
margin_left = 2.0
margin_top = -3.0
margin_right = 10.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 26 )
text = "0"

[node name="Cabbage_Icon" type="AnimatedSprite" parent="HUD_Seed"]
position = Vector2( 220, 5 )
scale = Vector2( 3, 3 )
frames = SubResource( 24 )
animation = "cabbage_icon"

[node name="Cabbage_Text" type="RichTextLabel" parent="HUD_Seed/Cabbage_Icon"]
margin_left = 2.0
margin_top = -3.0
margin_right = 10.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 26 )
text = "0"

[node name="Show_FPS" type="Label" parent="."]
margin_left = 255.0
margin_right = 319.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 47 )
text = "0"
align = 2
uppercase = true
script = ExtResource( 5 )
